--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.data.rest.base-path=http://
-slack.url = https://hooks.slack.com/services/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
+influx.url=http://127.0.0.1:8086
+influx.name=ultimaker1
+scheduler.url=http://127.0.0.1:8080
+
