--- a/api/pom.xml
+++ b/api/pom.xml
@@ -49,6 +49,16 @@
             <artifactId>influxdb-java</artifactId>
             <version>2.17</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.7.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okio</groupId>
+            <artifactId>okio</artifactId>
+            <version>2.4.3</version>
+        </dependency>
     </dependencies>
 
 </project>
