--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.data.rest.base-path=http://
 influx.url=http://127.0.0.1:8086
 influx.name=ultimaker1
-scheduler.url=http://127.0.0.1:8080
-
+managementTool.url=http://127.0.0.1:8080
