--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.data.rest.base-path=http://
-influx.url=http://localhost:8086
-influx.name=ultimaker1
-managementTool.url=http://localhost:8080
+influx.ip=http://localhost:8086
+influx.name=ultimaker
+managementTool.api=http://localhost:8080
